@@ -1,5 +1,17 @@
 2013-07-19  Nick Alcock  <nick.alcock@oracle.com>
 
+	* libproc/Pcontrol.h (ps_prochandle_t.awaiting_pending_stops):
+	New, true when libproc has halted a process, before it has waited
+	for it.
+	* libproc/Pcontrol.c (Pwait_internal): If waiting for a pending
+	stop with no pending_stops outstanding, and this Pwait() is
+	blocking, convert it to nonblocking.  If we are not runnable,
+	never do a blocking Pwait().
+	(Ptrace): If the process is dead, don't bother trying to stop it.
+	Maintain awaiting_pending_stops.  Keep waiting for the SIGSTOP to
+	be received until either we have no pending stops left or the
+	process is no longer runnable.
+
 	* libproc/rtld.db (rd_ldso_consistent_begin): Do nothing if
 	already halted, whether at a breakpoint or not.
 	(rd_ldso_nonzero_lmid_consistent_begin): Likewise.  If the
